--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <hmtl>
 	<body bgcolor= rgb(125, 114, 87)>
 		<center>
-			<a href="https://anonfile.com/V6dd5aAend/CH1-clean_raw_zip" downoad>Kamen Rider 913 ch1 cleaned + raws (not resized + not redrawn)</a>
+			<a href="https://anonfile.com/V6dd5aAend/CH1-clean_raw_zip" style="color: black" downoad>Kamen Rider 913 ch1 cleaned + raws (not resized + not redrawn)</a>
 		</center>
-		<div id="disqus_thread"></div>
-<script>
-	(function() {
-	var d = document, s = d.createElement('script');
-	s.src = 'https://https-p30xyclient-github-io-mcl.disqus.com/embed.js';
-	s.setAttribute('data-timestamp', +new Date());
-	(d.head || d.body).appendChild(s);
-})();
-</script>
-		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	<script id="dsq-count-scr" src="//https-p30xyclient-github-io-mcl.disqus.com/count.js" async></script>
+<form action="/submitting_done.php" method="GET"> 
+	<label for="name">Manga Title</label>
+	<label for="chapter">Manga Chapter</label>
+	<input name="name" id="name">
+	<input name="chapter" id="chapter">
+	<input type="submit"> 
+</form>
+
+
 	</body>
 </hmtl>
