--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
 		<center>
 			<a href="https://anonfile.com/V6dd5aAend/CH1-clean_raw_zip" style="color: black" downoad>Kamen Rider 913 ch1 cleaned + raws (not resized + not redrawn)</a>
 		</center>
-<form action="/submitting_done.php" method="GET"> 
+		<p> 
+
+
+
+
+
+		</p>
+<form action="/submitting_done.html" method="GET"> 
 	<label for="name">Manga Title</label>
+	<p>
+		
+	</p>
 	<label for="chapter">Manga Chapter</label>
 	<input name="name" id="name">
 	<input name="chapter" id="chapter">
