--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 
 
 		</p>
-<form action="/submitting_done.html" method="GET"> 
-	<label for="name">Manga Title</label>
-	<p>
-		
-	</p>
-	<label for="chapter">Manga Chapter</label>
-	<input name="name" id="name">
-	<input name="chapter" id="chapter">
-	<input type="submit"> 
-</form>
+<center>
+	<form action="/submitting_done.html" method="post"> 
+		<label for="name" style="color: gray">Manga Title</label>
+		<p>
+
+		</p>
+		<label for="chapter" style="color: gray">Manga Chapter</label>
+		<input name="name" id="name">
+		<p>
+			
+		</p>
+		<input name="chapter" id="chapter">
+		<input type="request" name="requestdata"><br>
+		<input type="submit" name="submit"> 
+	</form>
+</center>
 
 
 	</body>
