--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <hmtl>
 	<body bgcolor= rgb(125, 114, 87)>
 		<center>
-			<a href="https://anonfile.com/V6dd5aAend/CH1-clean_raw_zip" style="color: black" downoad>Kamen Rider 913 ch1 cleaned + raws (not resized + not redrawn)</a>
+			<a href="https://anonfile.com/V6dd5aAend/CH1-clean_raw_zip" style="color: gray" downoad>Kamen Rider 913 ch1 cleaned + raws (not resized + not redrawn)</a>
 		</center>
 		<p> 
 
 
 
 
+			
+
 
 		</p>
 <center>
-	<form action="/submitting_done.html" method="post"> 
-		<label for="name" style="color: gray">Manga Title</label>
-		<input type="request" name="requestdata"><br>
-		<input type="submit" name="submit"> 
-	</form>
+		<a href="https://discord.gg/Nscypkc" style="color: gray">Request other Manga + Chapters on discord </a>
 </center>
 
 
